force-app/main/default/objects/Quickbridge_Config__mdt/Quickbridge_Config__mdt.object-meta.xml
<CustomObject>
    <label>Quickbridge Config</label>
    <pluralLabel>Quickbridge Configs</pluralLabel>
</CustomObject>