force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_Active__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AuthorizeNet Active</label>
    <type>Checkbox</type>
</CustomField>