force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_API_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_API_Login_ID__c</fullName>
    <label>AuthorizeNet API Login ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>