force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_End_Date__c</fullName>
    <label>AuthorizeNet End Date</label>
    <type>Date</type>
</CustomField>