force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_Public_Client_Key__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Public_Client_Key__c</fullName>
    <label>AuthorizeNet Public Client Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>