force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Start_Date__c</fullName>
    <label>AuthorizeNet Start Date</label>
    <type>Date</type>
</CustomField>