force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_Use_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Use_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AuthorizeNet Use Sandbox</label>
    <type>Checkbox</type>
</CustomField>