force-app/main/default/objects/Quickbridge_Config__mdt/fields/AuthorizeNet_Webhook_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Webhook_Signing_Key__c</fullName>
    <label>AuthorizeNet Webhook Signing Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>