force-app/main/default/objects/Quickbridge_Config__mdt/fields/Available_Products_Visible__c.field-meta.xml
<CustomField>
    <fullName>Available_Products_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available Products Visible</label>
    <type>Checkbox</type>
</CustomField>