force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Account_Number__c</fullName>
    <label>FedEx Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>