force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_Active__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FedEx Active</label>
    <type>Checkbox</type>
</CustomField>