force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Client_Id__c</fullName>
    <label>FedEx Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>