force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_Default_Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Default_Pickup_Type__c</fullName>
    <label>FedEx Default Pickup Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>