force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FedEx_End_Date__c</fullName>
    <label>FedEx End Date</label>
    <type>Date</type>
</CustomField>