force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_Environment__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Environment__c</fullName>
    <label>FedEx Environment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>