force-app/main/default/objects/Quickbridge_Config__mdt/fields/FedEx_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Start_Date__c</fullName>
    <label>FedEx Start Date</label>
    <type>Date</type>
</CustomField>