force-app/main/default/objects/Quickbridge_Config__mdt/fields/Map_Draft_Orders_as_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Map_Draft_Orders_as_Estimates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Draft Orders as Estimates</label>
    <type>Checkbox</type>
</CustomField>