force-app/main/default/objects/Quickbridge_Config__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>