force-app/main/default/objects/Quickbridge_Config__mdt/fields/PayPal_Active__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayPal Active</label>
    <type>Checkbox</type>
</CustomField>