force-app/main/default/objects/Quickbridge_Config__mdt/fields/PayPal_ClientId__c.field-meta.xml
<CustomField>
    <fullName>PayPal_ClientId__c</fullName>
    <label>PayPal ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>