force-app/main/default/objects/Quickbridge_Config__mdt/fields/PayPal_EndDate__c.field-meta.xml
<CustomField>
    <fullName>PayPal_EndDate__c</fullName>
    <label>PayPal EndDate</label>
    <type>Date</type>
</CustomField>