force-app/main/default/objects/Quickbridge_Config__mdt/fields/PayPal_StartDate__c.field-meta.xml
<CustomField>
    <fullName>PayPal_StartDate__c</fullName>
    <label>PayPal StartDate</label>
    <type>Date</type>
</CustomField>