force-app/main/default/objects/Quickbridge_Config__mdt/fields/PayPal_UseSandbox__c.field-meta.xml
<CustomField>
    <fullName>PayPal_UseSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayPal UseSandbox</label>
    <type>Checkbox</type>
</CustomField>