force-app/main/default/objects/Quickbridge_Config__mdt/fields/Quickbooks_Default_Tax_Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Default_Tax_Agency_Id__c</fullName>
    <label>Quickbooks Default Tax Agency Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>