force-app/main/default/objects/Quickbridge_Config__mdt/fields/QuickBooks_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_End_Date__c</fullName>
    <label>QuickBooks End Date</label>
    <type>Date</type>
</CustomField>