force-app/main/default/objects/Quickbridge_Config__mdt/fields/QuickBooks_Realm_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Realm_ID__c</fullName>
    <label>QuickBooks Realm ID</label>
    <length>222</length>
    <type>Text</type>
</CustomField>