force-app/main/default/objects/Quickbridge_Config__mdt/fields/QuickBooks_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Start_Date__c</fullName>
    <label>QuickBooks Start Date</label>
    <type>Date</type>
</CustomField>