force-app/main/default/objects/Quickbridge_Config__mdt/fields/QuickBooks_Verifier_Token__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Verifier_Token__c</fullName>
    <label>QuickBooks Verifier Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>