force-app/main/default/objects/Quickbridge_Config__mdt/fields/Shopify_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Access_Token__c</fullName>
    <label>Shopify Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>