force-app/main/default/objects/Quickbridge_Config__mdt/fields/Shopify_API_Secret__c.field-meta.xml
<CustomField>
    <fullName>Shopify_API_Secret__c</fullName>
    <label>Shopify API Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>