force-app/main/default/objects/Quickbridge_Config__mdt/fields/Shopify_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Shopify_End_Date__c</fullName>
    <label>Shopify End Date</label>
    <type>Date</type>
</CustomField>