force-app/main/default/objects/Quickbridge_Config__mdt/fields/Shopify_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shopify Is Active</label>
    <type>Checkbox</type>
</CustomField>