force-app/main/default/objects/Quickbridge_Config__mdt/fields/Shopify_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Start_Date__c</fullName>
    <label>Shopify Start Date</label>
    <type>Date</type>
</CustomField>