force-app/main/default/objects/Quickbridge_Config__mdt/fields/Shopify_Store_URL__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Store_URL__c</fullName>
    <label>Shopify Store URL</label>
    <type>Url</type>
</CustomField>