force-app/main/default/objects/Quickbridge_Config__mdt/fields/Stripe_Active__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Active</label>
    <type>Checkbox</type>
</CustomField>