force-app/main/default/objects/Quickbridge_Config__mdt/fields/Stripe_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Stripe_End_Date__c</fullName>
    <label>Stripe End Date</label>
    <type>Date</type>
</CustomField>