force-app/main/default/objects/Quickbridge_Config__mdt/fields/Stripe_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Start_Date__c</fullName>
    <label>Stripe Start Date</label>
    <type>Date</type>
</CustomField>