force-app/main/default/objects/Quickbridge_Config__mdt/fields/Stripe_Use_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Use_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Use Sandbox</label>
    <type>Checkbox</type>
</CustomField>