force-app/main/default/objects/Quickbridge_Config__mdt/fields/Stripe_Webhook_Signing_Secret__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Webhook_Signing_Secret__c</fullName>
    <label>Stripe Webhook Signing Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>