force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>UPS_Account_Number__c</fullName>
    <label>UPS Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>