force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_Active__c.field-meta.xml
<CustomField>
    <fullName>UPS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UPS Active</label>
    <type>Checkbox</type>
</CustomField>