force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>UPS_Client_Secret__c</fullName>
    <label>UPS Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>