force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_Default_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>UPS_Default_Service_Code__c</fullName>
    <label>UPS Default Service Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>