force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>UPS_End_Date__c</fullName>
    <label>UPS End Date</label>
    <type>Date</type>
</CustomField>