force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_Environment__c.field-meta.xml
<CustomField>
    <fullName>UPS_Environment__c</fullName>
    <label>UPS Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
                <default>true</default>
                <label>Sandbox</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>