force-app/main/default/objects/Quickbridge_Config__mdt/fields/UPS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>UPS_Start_Date__c</fullName>
    <label>UPS_Start_Date</label>
    <type>Date</type>
</CustomField>