force-app/main/default/objects/Quickbridge_Config__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>